--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,7 @@ img {
 
 /* #region hero section */
 .hero-section {
-  width: 1440px;
+  max-width: 1440px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
   background-color: #2e2f42;
   background-image: linear-gradient(
@@ -169,6 +169,7 @@ img {
   letter-spacing: 0.04em;
   background-color: #4d5ae5;
   color: #fff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover,
@@ -206,6 +207,22 @@ img {
 
 .features-item {
   width: calc((100% - 72px) / 4);
+}
+
+.features-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+}
+
+.features-icon {
+  width: 64px;
+  height: 64px;
 }
 
 .features-tittle {
