--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   width: 264px;
@@ -221,8 +222,6 @@ img {
 }
 
 .features-icon {
-  width: 64px;
-  height: 64px;
 }
 
 .features-tittle {
