--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ img {
 /* #region page header */
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -93,6 +95,7 @@ img {
 
 .nav-link.current {
   position: relative;
+  color: #404bbf;
 }
 
 .nav-link.current::after {
@@ -326,7 +329,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 24px;
+  gap: 16px;
 }
 .social-icons-item {
   width: 40px;
@@ -346,7 +349,8 @@ img {
   fill: #f4f4fd;
 }
 
-.social-icons-link:hover {
+.social-icons-link:hover,
+.social-icons-link:focus {
   background-color: #31d0aa;
 }
 /* #endregion team section */
