--- a/css/styles.css
+++ b/css/styles.css
@@ -323,7 +323,7 @@ img {
 }
 
 .social-icons-container.team-icons-container {
-  padding: 8px 16px 32px 16px;
+  padding: 32px 0;
 }
 .social-icons-list {
   display: flex;
